added a footer and removed the header.
Felt the header was unnecessary for the index.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>ITMD-362 Human-Computer Interaction</title>
   </head>
   <body>
-    <header>ITMD-362</header>
     <div>
 	  <h1>The Required Texts</h1>
 	  <p>I love the books that are for this class. <em> The books are super cheap and such a good read!</em></p>
@@ -16,7 +15,9 @@
 	  <p>I love the show <em>The Office</em> I found a funny web design office meme to share with you!</p>
 	  <img src="media/webDesignMeme.media" alt="meme">
 	</div>
-	<footer>If any questions.. please contact website support ITMD-362</footer>
+	<div>
+	  <footer>If any questions.. please contact website support ITMD-362</footer>
+	</div>
   </body>
 </html>
   
