--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <div>
 	  <h1>The Required Texts</h1>
-	  <p>I love the books that are for this class. <em> The books are super cheap and such a good read!</em></p>
+	  <p>I love the books that are for this class. <strong> The books are super cheap and such good reads!</strong></p>
       <p>My favorite book so far is... <strong>Responsible Responsive Design</strong></p>
 	</div>
 	<div>
-	  <h2>Web Design meme</h2>
+	  <h2>Web Design Meme</h2>
 	  <p>I love the show <em>The Office</em> I found a funny web design office meme to share with you!</p>
 	  <img src="media/webDesignMeme.media" alt="meme">
 	</div>
